--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="presentaion">
             <h1>Balthazar Puget <br> Groupe 7</h1>
             <p>J'aime les jeux videos, les films et les mangas</p>
-            <p> Voici trois projets que j'ai pu mener au sein de mon début d'anneée à l'IIM </p>
+            <p> Voici trois projets que j'ai pu mener au sein de mon début d'année à l'IIM </p>
 
 
         </div>
