correction de fautes

--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
         </div>
         <div>
             <h2> Texturing d'une scene heroic fantasy</h2>
-            <p>Voici mon projet de Texturing d'une scene d'heroic fantasy sur le logiciel blender.<br> Nous avions
+            <p>Voici mon projet de Texturing d'une scène d'heroic fantasy sur le logiciel Blender.<br> Nous avions
                 appris la modelisation 3D avec blender, néanmoins les objets que nous avions réalisés ne contenaient
                 aucunes textures.
-                Nous avons donc amélioré nos scenes en rajoutants differents effets</p>
+                Nous avons donc amélioré nos scènes en rajoutant différents effets</p>
 
         </div>
     </section>
@@ -77,10 +77,10 @@
 
         <div class="col-lg-8 col-12">
             <h2> Création d'un game concept</h2>
-            <p>Nous avons du trouver des idées pour un jeu de plateforme en 2D dans le but de le réaliser plus tard dans
+            <p>Nous avons dû trouver des idées pour un jeu de plateforme en 2D dans le but de le réaliser plus tard dans
                 l'année<br>
-                Mon jeu, s'appelle Froggy Garden,on y joue une petite fille qui s'est miniaturisée au fin fond de son
-                jardin et qui va devoir rentrer chez soi . Pour franchir les diffents obstacles,elle pourra faire
+                Mon jeu s'appelle Froggy Garden, on y joue une petite fille qui s'est miniaturisée au fin fond de son
+                jardin et qui va devoir rentrer chez soi. Pour franchir les différents obstacles, elle pourra faire
                 pousser des graines qui se transformeront en plateformes </p>
 
         </div>
@@ -96,10 +96,10 @@
             <img src="images/air.JPG" class="imgpres" alt="">
         </div>
         <div class="description">
-            <h2> Création d'une pochetted'album pour un artiste de musique</h2>
-            <p>Vous avons du creer avec photoshop un design inédit et fictif d'un album d'un groupe de musique de notre
+            <h2> Création d'une pochette d'album pour un artiste de musique</h2>
+            <p>Vous avons dû créer avec photoshop un design inédit et fictif d'un album d'un groupe de musique de notre
                 choix.
-                J'ai personnelement pris le groupe AIR qui est un groupe d'electro francais du debut des années 2000
+                J'ai personnellement pris le groupe AIR qui est un groupe d'électro français du début des années 2000
             </p>
 
         </div>
